fixed alignment & search

--- a/css/gutenberg/editor.scss
+++ b/css/gutenberg/editor.scss
@@ -256,7 +256,7 @@
 }
 
 .ec-store-block-minicart .image {
-  background: url( '../../images/minicart-widget-preview.png') 50% 50% no-repeat;
+  background: url('../../images/gutenberg/minicart-widget-preview.png') 50% 50% no-repeat;
   background-size: 50%;
   position: absolute;
   left:0;
